[gd_scene load_steps=13 format=2]

[ext_resource path="res://Benchmark/3x3full.tscn" type="PackedScene" id=1]
[ext_resource path="res://Benchmark/10x10full.tscn" type="PackedScene" id=2]
[ext_resource path="res://Benchmark/30x30full.tscn" type="PackedScene" id=3]
[ext_resource path="res://Benchmark/Benchmark.gd" type="Script" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://Benchmark/LevelSettingsText.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "CameraMovement1"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -3.58771, 4.49252, -3.84354, 0.119255, 0.880251, 0.340084, -0.308673, 1, 1, 1, 2, 1, -3.43954, 2.98701, 2.14509, -0.265548, -0.465806, -0.148872, 0.830871, 1, 1, 1, 4, 1, 1.7446, 2.83078, 3.34968, -0.301669, 0.128017, 0.0409145, 0.943893, 1, 1, 1, 6, 1, 3.26558, 4.31655, -1.7169, -0.238528, 0.74456, 0.339691, 0.522824, 1, 1, 1, 8, 1, 0.475793, 4.76246, -3.82633, -0.0265055, 0.897721, 0.436374, 0.0545278, 1, 1, 1, 10, 1, -3.37853, 4.59521, -1.18837, 0.233137, 0.765304, 0.395408, -0.451231, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "CameraMovement2"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -9.10821, 9.85681, -6.58373, 0.174045, 0.825825, 0.371141, -0.387267, 1, 1, 1, 2, 1, -10.3285, 6.20722, 3.06444, -0.286441, -0.576745, -0.226024, 0.730911, 1, 1, 1, 4, 1, 4.24322, 2.47846, 8.95481, -0.168665, 0.132431, 0.0228748, 0.976469, 1, 1, 1, 6, 1, 10.6202, 7.70583, 0.14876, -0.323588, 0.61802, 0.309482, 0.646191, 1, 1, 1, 8, 1, 1.38835, 11.2351, -9.47034, -0.0515631, 0.883739, 0.45418, 0.100331, 1, 1, 1, 10, 1, -8.09227, 8.54487, -4.82473, 0.220422, 0.774936, 0.367967, -0.464207, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "CameraMovement3"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -27.2708, 8.99346, -25.1447, 0.103216, 0.894196, 0.269974, -0.341869, 1, 1, 1, 2, 1, -29.1411, 4.6604, 21.0547, -0.122922, -0.502013, -0.0723414, 0.853018, 1, 1, 1, 4, 1, 4.34701, 15.7504, 22.7458, -0.434409, 0.0553149, 0.0267403, 0.898618, 1, 1, 1, 6, 1, 25.5763, 11.0541, 8.95577, -0.296673, 0.5237, 0.20103, 0.772859, 1, 1, 1, 8, 1, 24.5108, 28.2912, -19.4809, -0.207229, 0.79109, 0.434905, 0.376949, 1, 1, 1, 10, 1, -20.9012, 21.2992, 11.5313, -0.454457, -0.417419, -0.254794, 0.74452, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "CameraMovement4"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -3.58771, 4.49252, -3.84354, 0.119255, 0.880251, 0.340084, -0.308673, 1, 1, 1, 2, 1, -3.43954, 2.98701, 2.14509, -0.265548, -0.465806, -0.148872, 0.830871, 1, 1, 1, 4, 1, 1.7446, 2.83078, 3.34968, -0.301669, 0.128017, 0.0409145, 0.943893, 1, 1, 1, 6, 1, 3.26558, 4.31655, -1.7169, -0.238528, 0.74456, 0.339691, 0.522824, 1, 1, 1, 8, 1, 0.475793, 4.76246, -3.82633, -0.0265055, 0.897721, 0.436374, 0.0545278, 1, 1, 1, 10, 1, -3.37853, 4.59521, -1.18837, 0.233137, 0.765304, 0.395408, -0.451231, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "CameraMovement5"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -9.10821, 9.85681, -6.58373, 0.174045, 0.825825, 0.371141, -0.387267, 1, 1, 1, 2, 1, -10.3285, 6.20722, 3.06444, -0.286441, -0.576745, -0.226024, 0.730911, 1, 1, 1, 4, 1, 4.24322, 2.47846, 8.95481, -0.168665, 0.132431, 0.0228748, 0.976469, 1, 1, 1, 6, 1, 10.6202, 7.70583, 0.14876, -0.323588, 0.61802, 0.309482, 0.646191, 1, 1, 1, 8, 1, 1.38835, 11.2351, -9.47034, -0.0515631, 0.883739, 0.45418, 0.100331, 1, 1, 1, 10, 1, -8.09227, 8.54487, -4.82473, 0.220422, 0.774936, 0.367967, -0.464207, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "CameraMovement6"
length = 10.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -27.2708, 8.99346, -25.1447, 0.103216, 0.894196, 0.269974, -0.341869, 1, 1, 1, 2, 1, -29.1411, 4.6604, 21.0547, -0.122922, -0.502013, -0.0723414, 0.853018, 1, 1, 1, 4, 1, 4.34701, 15.7504, 22.7458, -0.434409, 0.0553149, 0.0267403, 0.898618, 1, 1, 1, 6, 1, 25.5763, 11.0541, 8.95577, -0.296673, 0.5237, 0.20103, 0.772859, 1, 1, 1, 8, 1, 24.5108, 28.2912, -19.4809, -0.207229, 0.79109, 0.434905, 0.376949, 1, 1, 1, 10, 1, -20.9012, 21.2992, 11.5313, -0.454457, -0.417419, -0.254794, 0.74452, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:projection")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}

[node name="Benchmark" type="Spatial"]
script = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Map2" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Map3" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.989399, 0.123687, -0.0760929, 0, 0.523985, 0.851727, 0.14522, 0.842698, -0.518431, 0.104544, 2.54092, -1.7596 )
current = true
size = 25.0

[node name="CameraMovement" type="AnimationPlayer" parent="."]
anims/CameraMovement1 = SubResource( 1 )
anims/CameraMovement2 = SubResource( 2 )
anims/CameraMovement3 = SubResource( 3 )
anims/CameraMovement4 = SubResource( 4 )
anims/CameraMovement5 = SubResource( 5 )
anims/CameraMovement6 = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="Settings" type="Label" parent="."]
anchor_left = 0.045
anchor_top = 0.791
anchor_right = 0.473
anchor_bottom = 0.95
custom_fonts/font = ExtResource( 6 )
text = "MINIMAL SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="CameraMovement" to="." method="_animation_finished"]
